Archive2/96/159972fb5a6eb5/output
main.cpp: In function 'int main()':
main.cpp:12:12: error: conversion from 'B' to non-scalar type 'A' requested
     A a2 = b;
            ^
