Archive2/96/159972fb5a6eb5/main.cpp
struct B {};

struct A
{
    explicit A(const B&) {}
};

int main()
{
    B b;
    A a1(b);
    A a2 = b;
}
